@@ -8,6 +8,11 @@ THIS IS NOT A RELEASE YET
 Semantic MediaWiki 1.7.1 is currently in beta-quality and is not recommended for use in
 production until the actual release.
 
+* Added basic support for OpenLink Virtuoso RDF database. In addition to
+  $smwgDefaultStore = 'SMWSparqlStore', users should set
+  $smwgSparqlDatabase = 'SMWSparqlDatabaseVirtuoso' and use Virtuoso's SPARQL
+  endpoint at ./sparql/ for query and update alike. for further remarks and known
+  limitations, see the file ./includes/sparql/SMW_SparqlDatabaseVirtuoso.php .
 * Added ability to sort dates as dates in tables generated by SMW (bug 25768).
 * When there are only invalid query conditions, query answering is stopped (bug 33177).
 * Fixed display of nearby values on Special:SearchByProperty (bug 34178).
